<resources>
    <string name="app_name">SanPabLOOK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sampaloc_lake">Sampaloc Lake</string>
    <string name="tara_phil">Tara, Phil!</string>
    <string name="tara_na_san_tayo">Tara na! San Tayo?</string>
    <string name="_4_8">4.8</string>
    <string name="location">Location</string>
    <string name="sampalok_lake_san_pablo_laguna">Sampalok Lake, San Pablo, Laguna</string>
    <string name="_12_345_reviews">(12,345 reviews)</string>
    <string name="quick_tutorial">Quick Tutorial</string>
    <string name="todo">TODO</string>
    <string name="mohicap">TODO</string>
    <string name="yambo_pandin_lake">Yambo-Pandin Lake</string>
    <string name="create_new_account">Create new Account</string>
    <string name="already_registered_log_in_here">Already Registered? Log in here.</string>
    <string name="first_name">FIRST NAME</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">LAST NAME</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email">philnguyen@gmail.com</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">passwordpassword</string>
    <string name="enter_password">Enter Password</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="select_date">Select Date</string>
    <string name="make_sure_that_your_first_name_and_last_name_reflect_on_your_valid_id">Make sure that your first name and last name reflect on your Valid ID.</string>
    <string name="sign_up">Sign Up</string>
    <string name="san_pablo_city_laguna">San Pablo City, Laguna</string>
    <string name="mohicap_lake">Mohicap Lake</string>
    <string name="calibato_lake">Calibato Lake</string>
    <string name="palakpakin_lake">Palakpakin Lake</string>
    <string name="nature">Nature</string>
    <string name="hotelSelects">HOTEL</string>
    <string name="resortSelects">RESORT</string>
    <string name="bnbSelects">BNB</string>
    <string name="motelSelects">MOTEL</string>
    <string name="innSelects">INN</string>
    <string name="userLocation">18D Werner Schetelig Ave</string>
    <string name="hotel">Hotel</string>
    <string name="resort">Resort</string>
    <string name="bnb">BnB</string>
    <string name="motel">Motel</string>
    <string name="inn">Inn</string>
    <string name="deals">HOT DEALS</string>
    <string name="meding">Tahanan ni Aling Meding</string>
    <string name="medingPrice">₱1,099</string>
    <string name="casaPrice">₱3,900</string>
    <string name="preferred">MOST PREFERRED</string>
    <string name="searchHint">Tara na! Saan tayo?</string>
    <string name="palmera">Casa Palmera</string>
    <string name="palmeraPrice">₱1,345</string>
    <string name="diamond">Blue Diamond Court</string>
    <string name="mockRating">4.69</string>
    <string name="mockReview">420 Reviews</string>
    <string name="aboutCasaHotel">Casa San Pablo is within a sprawling family estate where you can reconnect with your loved ones — and yourself — through our unique, creative and cultural experiences. We offer family getaways, relaxing escapes, wedding party venues, team building spaces, celebrations, and creative wellness activities.</string>
    <string name="yourHost">Meet your host</string>
    <string name="line">____________________________________</string>
    <string name="casaProfileRating">4.54 ★ rating</string>
    <string name="casaProfileReviews">420 reviews</string>
    <string name="casaProfileHosting">6 months hosting</string>
    <string name="casaProfileInfo">We love to travel and share our experiences to others. We aim to assist and attract more tourists to visit the same place we’ve been.</string>
    <string name="casaLock">Lock on bedroom door</string>
    <string name="wifi">Wifi</string>
    <string name="bednbfast">Bed and Breakfast</string>
    <string name="park">Free parking on premise</string>
    <string name="cctv">Security cameras on property</string>
    <string name="pin">Events Place</string>
    <string name="stayRest">Where you\'ll be resting</string>
    <string name="casastayReview1">Had a great stay at Mr. Jak’s place. It is quiet and peaceful. Me and my part...</string>
    <string name="casastayReview2">So amazing! I love this place! I am alert, awake, thrilled, alive, enthusiastic. The food...</string>
    <string name="showmore">Show more >></string>
    <string name="availability">Availability</string>
    <string name="casaAvailable">September 9-24</string>
    <string name="cancel">Cancellation Policy</string>
    <string name="cancelInfo">This booking is non-refundable and non-negotiable. Review the Host’s full cancellation policy which applies even if you cancel for illness or disruptions caused by COVID-19.</string>
    <string name="houserules">House Rules</string>
    <string name="houserulesinfo">Check in : 12:00NN onwards
        \nCheckout before 10:00AM
        \n10 guests maximum</string>
    <string name="safetynproperty">Safety &amp; Property</string>
    <string name="safetynpropertyinfo">Security guards 24/7
        \nSecurity camera / recording device
        \n1 room = 1 vehicle
        \nLock-on-door rooms</string>
    <string name="booknow">BOOK NOW</string>
    <string name="medingLocation">Dagatan Blvd, San Pablo City, Laguna</string>
    <string name="aboutMeding">Finding an ideal luxury small hotel in San Pablo City does not have to be difficult. Welcome to Tahanan ni Aling Meding, a nice option for travelers like you. Tahanan ni Aling Meding puts the best of San Pablo City at your fingertips, making your stay both relaxing and enjoyable.</string>
    <string name="medingProfileInfo">Come and visit ang Tahanan ni Aling Meding, we offer guests a comfortable and secured stay at reasonable prices.</string>
    <string name="houserulesinfoMeding">Check in : 2:00 PM
        \nCheck-out: 12:00 NN
        \n2 guests maximum</string>
    <string name="medingAvailable">Always open</string>
    <string name="appName">San PabLOOK</string>
    <string name="palmerasHotel">Casa Palmeras Hotel</string>
    <string name="palmerasHotelLocation">Purok 3 Barangay, San Nicolas, San Pablo, Laguna, 4000</string>
    <string name="aboutPalmerasHotel">Casa Palmeras Hotel is located in San Pablo. The Lifestyle Strip and The Outlets at Lipa are worth checking out if shopping is on the agenda, while those wishing to experience the area\'s natural beauty can explore Sampaloc Lake and Lake Bunot.</string>
    <string name="palmerasHotelProfileInfo">Take advantage of a garden, an arcade/game room, and dry cleaning/laundry services at Casa Palmeras Hotel. The onsite local and international cuisine restaurant features light fare. Stay connected with free WiFi in public areas, and guests can find other amenities such as a gym and a conference center.</string>
    <string name="houserulesinfoPalmeras">Check in : 2:00 PM
        \nCheck-out: 12:00 NN
        \nMinimum check-in age: 18
        \nPets not allowed</string>
    <string name="blueDiamondotel">Blue Diamond Court</string>
    <string name="diamondHotelLocation">P379W+3R2, Pan-Philippine Hwy, San Pablo City, 4000 Laguna</string>
    <string name="aboutdiamondHotel">Casa Palmeras Hotel is located in San Pablo. The Lifestyle Strip and The Outlets at Lipa are worth checking out if shopping is on the agenda, while those wishing to experience the area\'s natural beauty can explore Sampaloc Lake and Lake Bunot.</string>
    <string name="diamondHotelProfileInfo">Take advantage of a garden, an arcade/game room, and dry cleaning/laundry services at Casa Palmeras Hotel. The onsite local and international cuisine restaurant features light fare. Stay connected with free WiFi in public areas, and guests can find other amenities such as a gym and a conference center.</string>
    <string name="houserulesinfoDiamond">Check in : 2:00 PM
        \nCheck-out: 12:00 NN
        \nMinimum check-in age: 18
        \nPets not allowed</string>
    <string name="home">Home</string>
    <string name="dine">Dine</string>
    <string name="book">Book</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="username">Phil Nguyen</string>
    <string name="bio">Hi I’m Phil, I’m an aspiring professional photographer!</string>
    <string name="viewAll">View all >>></string>
    <string name="labelSettings">Settings</string>
    <string name="labelLogout">Logout</string>
    <string name="deleteAccount">Delete account</string>
    <string name="labelEdit">Edit</string>
    <string name="labelUsername">Username</string>
    <string name="labelPassword">Password</string>
    <string name="labelBio">Bio</string>
    <string name="labelPhoneNumber">Phone number</string>
    <string name="labelEmail">Email Address</string>
    <string name="phoneNumber">09876543210</string>
    <string name="labelSave">Save</string>
    <string name="labelCancel">Cancel</string>
    <string name="labelCurrentPassword">Current Password</string>
    <string name="labelNewPassword">New Password</string>
    <string name="labelTypeNewPassword">Type your New Password</string>
    <string name="labelRetypePassword">Re-type New Password</string>
    <string name="labelRetypeYourPassword">Re-type your New Password</string>
    <string name="typeDeleteAccount">Re-type \"Delete account\" to confirm.</string>
    <string name="hintDeleteAccount">Type here</string>
    <string name="labelConfirm">Confirm</string>
    <string name="labelNotifications">Notifications</string>
    <string name="today">Today</string>
    <string name="date">Aug 27 at 8:00 PM</string>
    <string name="notificationTitle">Trisha upvoted your review.</string>
    <string name="labelEditProfilePic">Edit profile picture</string>
    <string name="labelTakePhoto">Take a photo</string>
    <string name="labelChoosePhoto">Choose from gallery</string>
    <string name="profilePicture">Profile picture</string>
    <string name="editProfilePic">Edit Profile Picture</string>
    <string name="backButton">Back</string>
    <string name="labelMenu">Menu</string>
    <string name="activityHistory">Activity History</string>
    <string name="destinationName1">Sampaloc Lake</string>
    <string name="destinationName2">St. Ambrose Chapel</string>
    <string name="destinationName3">Paraiso de Avedad</string>
    <string name="review1">\t\tVisited Sampaloc Lake in San Pablo City, Laguna, and it was an absolute gem! The serene beauty of this natural wonder left me spellbound. The picturesque surroundings and the tranquil waters make it a perfect escape from the hustle and bustle of city life. I had the chance to take a relaxing boat ride, which allowed me to fully immerse myself in the breathtaking scenery. The local culture and hospitality were heartwarming, and I enjoyed sampling some delicious local cuisine nearby.</string>
    <string name="review2">\t\tFirst time in Casa de San Pablo and YOU have to go! It’s the cutest little spot with amazing food. This place is to die for. IT WAS FIRE!! The service we received was so amazing and we will definitely be back again. They made us feel welcomed and gave us an amazing experience.</string>
    <string name="review3">\t\tThis place is great! Atmosphere is chill and cool but the staff is also really friendly. They know what they’re doing and what they’re talking about, and you can tell making the customers happy is their main priority. Food is pretty good, some classics and some twists, and for their prices it’s 100% worth it.</string>
    <string name="adminName">San Pablo Tourism Office</string>
    <string name="labelAdmin">Admin</string>
    <string name="labelDashboard">Dashboard</string>
    <string name="labelReports">Reports</string>
    <string name="popular">MOST POPULAR</string>
    <string name="casa">Casa San Pablo</string>
</resources>