<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtHotDeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/deals"
            android:textColor="@color/promoText"
            android:textSize="20sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Add your CardViews here -->

                <!-- Tahanan ni Aling Meding -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/medingCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="18sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="15sp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/medingImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="fitXY"
                            app:shapeAppearanceOverlay="@style/rounded"
                            app:srcCompat="@drawable/tahananmedingimg"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/medingText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/meding"
                            android:textColor="@color/cardColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/medingImg" />

                        <TextView
                            android:id="@+id/medingPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/medingPrice"
                            android:textColor="@color/priceColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/medingText" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- Casa San Pablo -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/casaCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="18sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="15sp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/casaImg"
                            android:layout_width="207sp"
                            android:layout_height="122sp"
                            android:scaleType="centerCrop"
                            app:shapeAppearanceOverlay="@style/rounded"
                            app:srcCompat="@drawable/casasanpabloimg"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/casaText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/casa"
                            android:textColor="@color/cardColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/casaImg" />

                        <TextView
                            android:id="@+id/casaPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/casaPrice"
                            android:textColor="@color/priceColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/casaText" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/txtMostPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/popular"
            android:textColor="@color/promoText"
            android:textSize="20sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Add your CardViews here -->

                <!-- Casa Palmera -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/palmeraCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="18sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="15sp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/palmeraImg"
                            android:layout_width="207sp"
                            android:layout_height="122sp"
                            android:scaleType="centerCrop"
                            app:shapeAppearanceOverlay="@style/rounded"
                            app:srcCompat="@drawable/casapalmeraimg"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/palmeraText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/palmera"
                            android:textColor="@color/cardColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/palmeraImg" />

                        <TextView
                            android:id="@+id/palmeraPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/palmeraPrice"
                            android:textColor="@color/priceColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/palmeraText"
                            tools:ignore="DuplicateIds" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!-- Blue Diamond Court -->

                <androidx.cardview.widget.CardView
                    android:id="@+id/bluediamondCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="18sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="10sp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="15sp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/diamondImg"
                            android:layout_width="207sp"
                            android:layout_height="122sp"
                            android:scaleType="centerCrop"
                            app:shapeAppearanceOverlay="@style/rounded"
                            app:srcCompat="@drawable/bluediamondimg"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/diamondText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/diamond"
                            android:textColor="@color/cardColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/diamondImg" />

                        <TextView
                            android:id="@+id/diamondPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:fontFamily="@font/poppins_bold"
                            android:paddingLeft="14sp"
                            android:text="@string/palmeraPrice"
                            android:textColor="@color/priceColor"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/diamondText" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

</ScrollView><?xml version="1.0" encoding="utf-8"?>